--- a/style.css
+++ b/style.css
@@ -327,13 +327,13 @@ img{
   padding: 0 1.5rem;
 }
 
-/*========== MENU ==========*/
-.menu__container{
+/*========== new ==========*/
+.new__container{
   grid-template-columns: repeat(2, 1fr);
   justify-content: center;
 }
 
-.menu__content{
+.new__content{
   position: relative;
   display: flex;
   flex-direction: column;
@@ -343,30 +343,30 @@ img{
   padding: .75rem;
 }
 
-.menu__img{
+.new__img{
   width: 100px;
   align-self: center;
   margin-bottom: var(--mb-2);
 }
 
-.menu__name, .menu__preci{
+.new__name, .new__preci{
   font-weight: var(--font-semi-bold);
   color: var(--title-color);
 }
 
-.menu__name{
+.new__name{
   font-size: var(--normal-font-size);
 }
 
-.menu__detail, .menu__preci{
+.new__detail, .new__preci{
   font-size: var(--small-font-size);
 }
 
-.menu__detail{
+.new__detail{
   margin-bottom: var(--mb-1);
 }
 
-.menu__button{
+.new__button{
   position: absolute;
   bottom: 0;
   right: 0;
@@ -375,29 +375,59 @@ img{
   border-radius: .5rem 0 .5rem 0;
 }
 
-/*========== APP ==========*/
-.app__data{
+/*========== DONATE/SELL ==========*/
+.donate__data{
   text-align: center;
 }
 
-.app__description{
+.donate__description{
   margin-bottom: var(--mb-5);
 }
 
-.app__stores{
+.donate__stores{
   margin-bottom: var(--mb-4);
 }
 
-.app__store{
+.donate__store{
   width: 120px;
   margin: 0 var(--mb-1);
 }
 
-.app__img{
+.donate__img{
   width: 230px;
   justify-self: center;
 }
 
+/*========== FORM ==========*/
+input[type=text], select, textarea {
+    width: 90%;
+    padding: 12px;
+    border: 1px solid #457b9d;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+    color: var(--text-color-light);
+  }
+  
+  input[type=submit] {
+    background-color:  #457b9d ;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  input[type=submit]:hover {
+    background-color: #1d3557;
+  }
+  .container {
+    border-radius: 5px;
+    background-color: #FBFEFD;
+    padding: 20px;
+}
+  
 /*========== CONTACT ==========*/
 .contact__container{
   text-align: center;
@@ -458,20 +488,20 @@ img{
 @media screen and (min-width: 576px){
   .home__container,
   .about__container,
-  .app__container{
+  .donate__container{
     grid-template-columns: repeat(2,1fr);
     align-items: center;
   }
 
   .about__data, .about__initial,
-  .app__data, .app__initial,
+  .donate__data, .donate__initial,
   .contact__container, .contact__initial{
     text-align: initial;
   }
 
-  .about__img, .app__img{
-    width: 380px;
-    order: -1;
+  .about__img, .donate__img{
+    width: 500px;
+    order: 1;
   }
 
   .contact__container{
@@ -517,22 +547,22 @@ img{
   }
 
   .services__container,
-  .menu__container{
+  .new__container{
     margin-top: var(--mb-6);
   }
 
-  .menu__container{
+  .new__container{
     grid-template-columns: repeat(3, 210px);
     column-gap: 4rem;
   }
-  .menu__content{
+  .new__content{
     padding: 1.5rem;
   }
-  .menu__img{
+  .new__img{
     width: 130px;
   }
 
-  .app__store{
+  .donate__store{
     margin: 0 var(--mb-1) 0 0;
   }
 }
@@ -548,7 +578,14 @@ img{
   }
 
   .about__container,
-  .app__container{
+  .donate__container{
     column-gap: 7rem;
   }
+}
+
+
+
+/* checkout */
+fieldset{
+  margin: 10px;
 }
